css and portfolio files added

--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="page">
     <!-- Шапка сайту -->
     <header>
       <nav>
-        <a href="/"> WebStudio </a>
-        <ul>
+        <a href="/" class="logo"><span>Web</span>Studio </a>
+        <ul class="list">
           <li><a href="">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
+          <li><a href="./portfolio.html">Портфоліо</a></li>
           <li><a href="">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="list">
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
@@ -25,7 +26,7 @@
     <main>
       <!-- Блок зазивалка :D -->
       <section>
-        <h1>
+        <h1 class="main-header">
           Ефективні рішення для <br />
           вашого бізнесу
         </h1>
@@ -35,29 +36,29 @@
       <!-- Наші переваги -->
       <section>
         <h2 hidden>Наші переваги</h2>
-        <ul>
+        <ul class="list">
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <h3 class="headers">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p>
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <h3 class="headers">ПУНКТУАЛЬНІСТЬ</h3>
             <p>
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
+            <h3 class="headers">ПЛАНУВАННЯ</h3>
             <p>
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІ</h3>
+            <h3 class="headers">СУЧАСНІ ТЕХНОЛОГІ</h3>
             <p>
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
@@ -67,8 +68,8 @@
       </section>
       <!-- Чим ми займаємося -->
       <section>
-        <h2>Чим ми займаємося</h2>
-        <ul>
+        <h2 class="headers">Чим ми займаємося</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/imgfirst.jpg"
@@ -94,15 +95,15 @@
       </section>
       <!-- Наша команда -->
       <section>
-        <h2>Наша команда</h2>
-        <ul>
+        <h2 class="headers">Наша команда</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/imgihor.jpg"
               alt="Man in brown shirt"
               width="270"
             />
-            <h3>Ігор Дем'яненко</h3>
+            <h3 class="headers">Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
@@ -111,7 +112,7 @@
               alt="Woman in black jacket"
               width="270"
             />
-            <h3>Ольга Рєпіна</h3>
+            <h3 class="headers">Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
@@ -120,7 +121,7 @@
               alt="Man in gray shirt"
               width="270"
             />
-            <h3>Микола Тарасов</h3>
+            <h3 class="headers">Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
@@ -129,19 +130,19 @@
               alt="Man in black t-shirt"
               width="270"
             />
-            <h3>Михайло Єрмаков</h3>
+            <h3 class="headers">Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <a href="/"> WebStudio </a>
+      <a href="/" class="logo"><span>Web</span>Studio </a>
 
       <address>
-        <ul>
+        <ul class="list">
           <li>
-            <a href="https://goo.gl/maps/kmzCdjqD1Y1qGuR56"
+            <a href="https://goo.gl/maps/kmzCdjqD1Y1qGuR56" class="address"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
