--- a/index.html
+++ b/index.html
@@ -15,55 +15,69 @@
     <!-- Шапка сайту -->
     <header>
       <nav>
-        <a href="/" class="logo"><span>Web</span>Studio </a>
+        <a href="/" class="link logo"
+          ><span class="logo-color-blue">Web</span>Studio
+        </a>
         <ul class="site-nav list">
-          <li><a href="./index.html" class="current">Студія</a></li>
-          <li><a href="./portfolio.html">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+          <li>
+            <a href="./index.html" class="site-nav-link current">Студія</a>
+          </li>
+          <li>
+            <a href="./portfolio.html" class="site-nav-link">Портфоліо</a>
+          </li>
+          <li><a href="" class="site-nav-link">Контакти</a></li>
         </ul>
       </nav>
       <ul class="contacts list">
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li>
+          <a href="mailto:info@devstudio.com" class="contacts-link"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+380961111111" class="contacts-link"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </header>
     <main>
       <!-- Блок зазивалка :D -->
       <section class="hero">
-        <h1 class="hero-header">
+        <h1 class="hero-title">
           Ефективні рішення для <br />
           вашого бізнесу
         </h1>
         <!-- Не впевнена, що <br /> потрібно - можливо видалити у майбутньому -->
-        <button type="button">Замовити послугу</button>
+        <button type="button" class="hero-button">Замовити послугу</button>
       </section>
       <!-- Наші переваги -->
       <section class="advantages">
         <h2 hidden>Наші переваги</h2>
         <ul class="list">
           <li>
-            <h3 class="advantages-headers">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="advantages-par">
+            <h3 class="advantages-title">Увага до деталей</h3>
+            <p class="advantages-text">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h3 class="advantages-headers">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="advantages-par">
+            <h3 class="advantages-title">Пунктуальність</h3>
+            <p class="advantages-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h3 class="advantages-headers">ПЛАНУВАННЯ</h3>
-            <p class="advantages-par">
+            <h3 class="advantages-title">Планування</h3>
+            <p class="advantages-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h3 class="advantages-headers">СУЧАСНІ ТЕХНОЛОГІ</h3>
-            <p class="advantages-par">
+            <h3 class="advantages-title">Сучасні технології</h3>
+            <p class="advantages-textr">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
@@ -72,7 +86,7 @@
       </section>
       <!-- Чим ми займаємося -->
       <section class="work">
-        <h2 class="section-header">Чим ми займаємося</h2>
+        <h2 class="section-title">Чим ми займаємося</h2>
         <ul class="list">
           <li>
             <img
@@ -99,7 +113,7 @@
       </section>
       <!-- Наша команда -->
       <section class="team">
-        <h2 class="section-header">Наша команда</h2>
+        <h2 class="section-title">Наша команда</h2>
         <ul class="list">
           <li>
             <img
@@ -107,8 +121,8 @@
               alt="Man in brown shirt"
               width="270"
             />
-            <h3 class="headers">Ігор Дем'яненко</h3>
-            <p class="team-par">Product Designer</p>
+            <h3 class="team-title">Ігор Дем'яненко</h3>
+            <p class="team-text">Product Designer</p>
           </li>
           <li>
             <img
@@ -116,8 +130,8 @@
               alt="Woman in black jacket"
               width="270"
             />
-            <h3 class="headers">Ольга Рєпіна</h3>
-            <p class="team-par">Frontend Developer</p>
+            <h3 class="team-title">Ольга Рєпіна</h3>
+            <p class="team-text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -125,8 +139,8 @@
               alt="Man in gray shirt"
               width="270"
             />
-            <h3 class="headers">Микола Тарасов</h3>
-            <p class="team-par">Marketing</p>
+            <h3 class="team-title">Микола Тарасов</h3>
+            <p class="team-text">Marketing</p>
           </li>
           <li>
             <img
@@ -134,27 +148,35 @@
               alt="Man in black t-shirt"
               width="270"
             />
-            <h3 class="headers">Михайло Єрмаков</h3>
-            <p class="team-par">UI Designer</p>
+            <h3 class="team-title">Михайло Єрмаков</h3>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
+    <!-- Footer -->
     <footer class="footer">
-      <a href="/" class="logo"><span>Web</span>Studio </a>
+      <a href="/" class="link logo"
+        ><span class="logo-color-blue">Web</span
+        ><span class="logo-color-white">Studio</span>
+      </a>
 
       <address>
         <ul class="list">
           <li>
-            <a href="https://goo.gl/maps/kmzCdjqD1Y1qGuR56" class="address"
+            <a href="https://goo.gl/maps/kmzCdjqD1Y1qGuR56" class="link address"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
           <li class="contact-details">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="contact-details-link"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="contact-details">
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="contact-details-link"
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </address>
